added sign up page

--- a/game.html
+++ b/game.html
@@ -10,7 +10,12 @@
     <title>Elden Ring</title>
 </head>
 <body>
-      <!--                                             header -->
+  <a href="#">
+    <button class="back-to-top t-light">
+      <i class="fa-solid fa-angles-up"></i>
+    </button>
+  </a>
+    <!--                                             header -->
     <!--                                             header -->
     <!--                                             header -->
     <!--                                             header -->
@@ -22,8 +27,7 @@
             <img src="assets/icons-and-logos/Logo light transparent.png" alt="Invasion Icon">
           </a>
           <div class="sign d-flex align-items-center">
-            <a href="#"><div class="signin t-light text-shadowed">Sign in</div></a>
-            <a href="#"><div class="signup t-light">Sign Up</div></a>
+            <a href="#"><div class="signup t-light">Sign in</div></a>
           </div>
         </div>
       </div>
@@ -68,8 +72,7 @@
               </li>
               <li class="nav-item d-flex align-items-center">
                 <div class="nav-sign d-flex align-items-center">
-                  <a href="#"><div class="nav-signin text-shadowed-dark t-light">Sign in</div></a>
-                  <a href="#"><div class="nav-signup t-light">Sign Up</div></a>
+                  <a href="#"><div class="nav-signup t-light">Sign in</div></a>
                 </div>
               </li>
             </ul>
